# estar

./: ABOUT  CHANGES-estar-consistency-check  CHANGES-supergrid-rfct-0  CHANGES-supergrid-rfct-1  CMakeLists.txt  DIGEST-supergrid-rfct-0  DIGEST-supergrid-rfct-1  Doxyfile.in  E-Star.vcproj  LICENSE.BSD  Makefile.am  Makefile.in  NOTES-estar-consistency-check  README  README.md  TODO  aclocal.m4  autogen.sh  build-stage.sh  cleanup.sh  configure  configure.ac  estar.pc.in  footer.html  mainpage.dox
attic/: E-Star.sln  E-Star.vcproj
estar/: Algorithm.cpp  Algorithm.hpp  AlphaKernel.cpp  AlphaKernel.hpp  CMakeLists.txt  CSpace.cpp  CSpace.hpp  ComparisonFacade.cpp  ComparisonFacade.hpp  Facade.cpp  Facade.hpp  FacadeReadInterface.hpp  FacadeWriteInterface.hpp  Grid.cpp  Grid.hpp  GridNode.hpp  Kernel.cpp  Kernel.hpp  LSMKernel.cpp  LSMKernel.hpp  Makefile.am  Makefile.in  NF1Kernel.cpp  NF1Kernel.hpp  Propagator.cpp  Propagator.hpp  PropagatorFactory.cpp  PropagatorFactory.hpp  Queue.cpp  Queue.hpp  Region.cpp  Region.hpp  RiskMap.hpp  Sprite.cpp  Sprite.hpp  Supergrid.cpp  Supergrid.hpp  Upwind.cpp  Upwind.hpp  base.cpp  (+19 more)
estar/leftovers/: FooKernel.cpp  FooKernel.hpp  MeanKernel.cpp  MeanKernel.hpp  SConscript
gfx/: CMakeLists.txt  Makefile.am  Makefile.in  MetaMousehandler.cpp  MetaMousehandler.hpp  Mousehandler.cpp  Mousehandler.hpp  Subwindow.cpp  Subwindow.hpp  Viewport.cpp  Viewport.hpp  graphics.cpp  graphics.hpp  wrap_gl.hpp  wrap_glu.cpp  wrap_glu.hpp  wrap_glut.hpp
gfx/leftovers/: SConscript
leftovers/: Environ.py  Platform.py  SConstruct  sedme.sh
misc/: estar-compare-lsm-nf1.txt  estar-compare-lsm-replan.txt  estar-compare-prop-check-queue.txt  example-testqorder-hex.results  grid-hex-small.txt  grid-nhp-1.txt  grid-nhp-2.txt  grid-nhp-3.txt  grid-nhp-4.txt  grid-small-bp.txt  grid-small.txt  pnf-dynamic-impulse.pnf  pnf-setup-iros06-a.pnf  pnf-setup-iros06-b.pnf  pnf-setup-iros06-buffered-b.pnf  pnf-setup-iros06-c.pnf  pnf-setup-iros06-d.pnf  pnf-setup-iros06-e.pnf  pnf-setup-iros06-f.pnf  pnf-setup-star06-a.pnf  pnf-setup-star06-b.pnf  pnf-static-impulse.pnf  pnf_3d_riskplot.sh  rebuild-from-scratch.sh
pnf/: BufferZone.cpp  BufferZone.hpp  Flow.cpp  Flow.hpp  Makefile.am  Makefile.in  PNFRiskMap.cpp  PNFRiskMap.hpp  RobotShape.cpp  RobotShape.hpp  TODO  cooc3d.c  pnf_cooc.c  pnf_cooc.h  test_cooc.c  test_flow.cpp  test_riskmap.cpp
pnf/leftovers/: Layer.cpp  Layer.hpp  Makefile  MotionModel.cpp  MotionModel.hpp  SConscript  bjoern-lwpp.m  setup0.pnf  setup1.pnf  setup2.pnf
tools/: test.cpp  test_dbg_opt.cpp  testqorder.cpp
tools/leftovers/: test_edgeset.cpp
