ADD_LIBRARY (estar
             Algorithm.cpp
             CSpace.cpp
             AlphaKernel.cpp
             Facade.cpp
             ComparisonFacade.cpp
             Grid.cpp
             Kernel.cpp
             LSMKernel.cpp
             NF1Kernel.cpp
             Propagator.cpp
             PropagatorFactory.cpp
             Queue.cpp
             Region.cpp
             Sprite.cpp
             Upwind.cpp
             base.cpp
             check.cpp
             dump.cpp
             numeric.cpp
             util.cpp)

INCLUDE_DIRECTORIES (.
                     ..)
