CPPFLAGS= @ESTAR_CPPFLAGS@
CFLAGS=   @ESTAR_CFLAGS@
CXXFLAGS= @ESTAR_CXXFLAGS@
LDFLAGS=  @ESTAR_LDFLAGS@

noinst_LTLIBRARIES= libgfx.la

libgfx_la_SOURCES=  Mousehandler.cpp \
                    Subwindow.cpp \
                    Viewport.cpp \
                    wrap_glu.cpp

include_HEADERS=    Mousehandler.hpp \
                    Subwindow.hpp \
                    Viewport.hpp \
                    wrap_gl.hpp \
                    wrap_glu.hpp \
                    wrap_glut.hpp

includedir=         @includedir@/gfx
