AM_CPPFLAGS= @ESTAR_CPPFLAGS@
AM_CFLAGS=   @ESTAR_CFLAGS@
AM_CXXFLAGS= @ESTAR_CXXFLAGS@
AM_LDFLAGS=  @ESTAR_LDFLAGS@

lib_LTLIBRARIES=    libgfx.la

libgfx_la_SOURCES=  Mousehandler.cpp \
                    Subwindow.cpp \
                    Viewport.cpp \
                    wrap_glu.cpp

include_HEADERS=    Mousehandler.hpp \
                    Subwindow.hpp \
                    Viewport.hpp \
                    wrap_gl.hpp \
                    wrap_glu.hpp \
                    wrap_glut.hpp

includedir=         @includedir@/gfx
